Sandbox hardening: docker runner, verify integration, config, tests; CI trigger for feature/**; mypy package inits; formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ["feature/actuator-safe-apply", "main", "develop"]
+    branches: ["feature/**", "main", "develop"]
   pull_request:
     branches: ["main", "develop"]
 
