--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,24 +1,46 @@
-line-length = 88
-target-version = "py311"
-extend-exclude = [
-    "repo",
-    ".mypy_cache",
-    ".venv",
-    "venv",
-    "build",
-    "dist",
-]
+# Ruff configuration (consolidated)
 
-[lint]
-select = ["E", "F", "I", "B", "UP", "SIM", "C90"]
-ignore = [
-    # Let the formatter handle wrapping
-    "E501",
-]
+line-length = 100
+target-version = "py311"
 
 [format]
 quote-style = "double"
 indent-style = "space"
 line-ending = "lf"
+skip-magic-trailing-comma = false
+docstring-code-format = true
+
+[lint]
+select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
+ignore = [
+  # Let the formatter handle wrapping
+  "E501",
+]
+extend-exclude = [
+  "repo",
+  "logs",
+  ".mypy_cache",
+  ".pytest_cache",
+  ".venv",
+  "venv",
+  "build",
+  "dist",
+  "node_modules",
+]
+
+[lint.isort]
+known-first-party = [
+  "act",
+  "verify",
+  "sandbox",
+  "planning",
+  "memory",
+  "update",
+  "tools",
+  "obs",
+]
+
+[lint.per-file-ignores]
+"tests/**/*" = []
 
 
